--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   
       <div
          style="font-family:Helvetica;font-size:13px;line-height:1;text-align:center;color:#FFFFFF;"
-      ><a href="https://daniel-tome123.github.io/NewsletterEx1/" target="_blank">
+      ><a href="https://daniel-tome123.github.io/NewsletterEx1/index.html" target="_blank">
           		<span>
           			Versão online
           		</span>
